--- a/style.css
+++ b/style.css
@@ -17,57 +17,73 @@ body{
 
 .scoreDiv {
     text-align: center;
+    margin-top: 20px;
 }
 
 .p1ScoreDiv {
     display: inline-block;
     text-align: center;
-    border: solid 1px black;
     border-radius: 5px;
     padding: 10px;
     background: red;
     width: 35%;
+    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
 }
 
 .p2ScoreDiv {
     display: inline-block;
     text-align: center;
-    border: solid 1px black;
     border-radius: 5px;
     background: #939393;
     padding: 10px;
     width: 35%;
+    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
 }
 
 .tiesScoreDiv {
     text-align: center;
-    border: solid 1px black;
     border-radius: 5px;
     background: yellow;
     padding: 10px;
     display: inline-block;
     margin: 0px 10px;
+    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
 }
 
 .p1ChoiceDiv {
     display: inline-block;
-    border: solid 1px black;
     border-radius: 5px;
     background: red;
     padding: 10px;
     margin: 20px 10px 0px 0px;
     min-height: 100px;
+    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
 }
 
 .p2ChoiceDiv {
     display: inline-block;
-    border: solid 1px black;
     border-radius: 5px;
     background: #939393;
     padding: 10px;
     margin: 20px 0px 0px 0px;
     min-height: 100px;
+    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
 }
+
+.playerChoosing {
+    height: 100px;
+    width: 100px;
+    animation: App-logo-spin infinite 20s linear;
+}
+
+@keyframes App-logo-spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
 
 #loginDiv {
     margin: 0 auto;
@@ -84,7 +100,15 @@ body{
     font-weight: bold;
 }
 
+#loginWarning {
+    color: red;
+    text-align: center;
+}
+
 #chatDiv{
+    position: absolute;
+    top: 60px;
+    right: 10px;
     margin-bottom: 20px;
     border: solid 4px black;
     border-radius: 5px;
@@ -93,6 +117,9 @@ body{
 }
 
 #inputDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     border-top: solid 2px black;
     padding: 10px 15px;
@@ -100,13 +127,20 @@ body{
 }
 
 #chatInput {
-    width: 83.5%;
+    padding: 3px 10px;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 2px 1px -1px rgba(0,0,0,0.12);
 }
 
 #chatSubmit {
-    width: 13.5%;
+    margin-left: 5px;
+    padding: 3px 10px;
     text-align: center;
-    visibility: hidden;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 2px 1px -1px rgba(0,0,0,0.12);
+    /* visibility: hidden; */
 }
 
 .seatWarmer {
