--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
+
+
 body{
-    background-image: url(imgs/gaming.png);
-    font-family: 'Righteous', cursive;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.2rem;
+    background: linear-gradient(45deg, #d4fbff 30%, #b0f8ff 90%);
+    background-size: cover;
+    height: 100vh;
 }
 
-#rpsHeader{
+#rpsHeader {
     text-align: center;
     color: #565656;
 }
 
-#logo{
+#logo {
     display: block;
     margin: 0 auto;
     height: 200px;
@@ -70,6 +75,16 @@ body{
     box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
 }
 
+.playerChoice {
+    height: 100px;
+    width: 100px;
+}
+
+.playerChose {
+    height: 100px;
+    width: 100px;
+}
+
 .playerChoosing {
     height: 100px;
     width: 100px;
@@ -85,27 +100,7 @@ body{
     }
   }
 
-#loginDiv {
-    margin: 0 auto;
-    padding: 20px;
-}
-
-#login {
-    border-radius: 5px;
-}
-
-#submit {
-    border: none;
-    background: lightgray;
-    font-weight: bold;
-}
-
-#loginWarning {
-    color: red;
-    text-align: center;
-}
-
-#chatDiv{
+#chatDiv {
     position: absolute;
     top: 60px;
     right: 10px;
