--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,7 @@ body{
     margin-bottom: 20px;
     border: solid 4px black;
     border-radius: 5px;
-    background-image: url(imgs/skulls.png);
+    background-image: url(../imgs/skulls.png);
     font-family: 'IBM Plex Mono', monospace;
 }
 
@@ -118,7 +118,7 @@ body{
     width: 100%;
     border-top: solid 2px black;
     padding: 10px 15px;
-    background-image: url(imgs/weave.png);
+    background-image: url(../imgs/weave.png);
 }
 
 #chatInput {
