RPS works along with the Chat feature. Tomorrow will be media queries

--- a/styles/menus.css
+++ b/styles/menus.css
@@ -12,7 +12,7 @@
     flex-wrap: wrap;
 }
 
-#loginDiv > input, #loginDiv > button, #signupForm > input, #signupDiv > button {
+#loginForm > input, #loginDiv > button, #signupForm > input, #signupDiv > button {
     width: 100%;
     margin-bottom: 15px;
     padding: 5px 10px;
@@ -22,12 +22,12 @@
     box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
 }
 
-#loginDiv > button, #submitSignup {
+#submitLogin, #submitSignup {
     color: white;
     background: linear-gradient(45deg, #373ced 30%, #262bc7 90%);
 }
 
-#loginDiv > button:hover, #submitSignup:hover {
+#submitLogin:hover, #submitSignup:hover {
     background: linear-gradient(45deg, #565bf1 30%, #353bcf 90%);
 }
 
@@ -193,6 +193,7 @@ hr {
 #connectPrivate:hover {
     background: linear-gradient(45deg, #565bf1 30%, #353bcf 90%);
 }
+
 
 
 
